# LumaKit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent.py  ideas.txt  improvement_ideas.txt  jump.py  lumakit.py  lumakit.service.example  main.py  ollama_client.py  pyproject.toml  requirements.txt  telegram_bridge.py  tool_registry.py  web_bridge.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: add-tool.md
core/: __init__.py  active_run.py  app_runtime_config.py  auth.py  chat_store.py  cli.py  commands.py  diffs.py  display.py  email_checker.py  email_draft_store.py  email_filter.py  heartbeat.py  identity.py  interface_context.py  interrupts.py  memory_store.py  menu.py  notifications.py  paths.py  reminder_checker.py  runtime_config.py  service.py  storage.py  summarizer.py  task_runner.py  task_store.py  telegram_api.py  telegram_commands.py  telegram_io.py  telegram_owner_config.py  telegram_speech.py  telegram_state.py  telegram_user_config.py
docs/: autostart.md  family_alerts.md  gmail_setup.md  instagram_tips.md  launcher.md  quickstart_linux.md  quickstart_windows.md  telegram_setup.md
docs/issues/: add_conversation_persistence.md  add_hang_freeze_detection.md  add_repo_move_path_tool.md  add_repo_read_json_tool.md  add_web_http_request_tool.md  configurable_system_prompt.md  git_auth_non_interactive_fallback.md  parallel_tool_execution.md  (+1 more)
internal/: lumakit-cli-command-plan.md
surfaces/: cli.py  telegram.py  web.py
tools/: file_tools.py  python_tools.py  shell_tools.py  url_tools.py  web_tools.py
web/: index.html
(+49 files in other folders)
